# graphics-elementary

./: CMakeLists.txt  README.md
src/getting-started/: CMakeLists.txt  main.cpp
src/getting-started/shaders/: fragmentShader.frag  vertexShader.vert
src/utils/: CMakeLists.txt  Debug.hpp  GL_Loader.cpp  GL_Loader.hpp  Shader.cpp  Shader.hpp
